# common_sequence_diagram_io

./: Cargo.toml  README.md
src/: internal_representation.rs  lib.rs
src/conversion/: lang_to_repr.rs  mod.rs  repr_to_lang.rs
src/core/: lang_to_repr.rs  mod.rs  repr_to_lang.rs
src/from_text/: context_aware_parser.rs  mod.rs  parse.rs
src/from_text/util/: delimited_lang_parser.rs  generic_broadcast_parser.rs  mod.rs  parse_utils.rs
src/tests/: mod.rs
src/tests/common/: mod.rs
src/tests/lang_colorful/: colorful_lang.rs  mod.rs
src/tests/lang_colorful/core/: internal_representation.rs  mod.rs
src/tests/lang_colorful/from_text/: context_aware_parser.rs  mod.rs
src/tests/lang_colorful/tests/: main_test.rs  mod.rs
src/tests/lang_colorful/to_image/: colorful_colors.rs  drawing_context.rs  mod.rs
src/tests/lang_minimal/: minimal_lang.rs  mod.rs
src/tests/lang_minimal/core/: internal_representation.rs  lang_to_repr.rs  mod.rs  repr_to_lang.rs
src/tests/lang_minimal/from_text/: context_aware_parser.rs
src/tests/lang_minimal/tests/: main_test.rs
src/tests/lang_minimal/to_image/: drawing_context.rs  mod.rs
src/tests/lang_minimal/to_text/: context_aware_printer.rs  mod.rs
src/to_image/: common_interaction_drawer.rs  interface.rs  mod.rs
src/to_image/draw/: context_aware_drawer.rs  draw.rs  mod.rs  util.rs
src/to_image/drawable/: mod.rs
src/to_image/drawable/leaf/: broadcast.rs  (+5 more)
src/to_image/extract/: context_aware_extractor.rs  extract.rs  extract_rec.rs  instructions.rs  mod.rs
src/to_text/: context_aware_printer.rs  mod.rs  print.rs
(+13 files in other folders)
