[package]
name = "common_sequence_diagram_io"
version = "0.1.8"
authors = ["Erwan Mahe"]
edition = "2021"

license = "Apache-2.0"
description = "A generic interface to parse, print and draw interaction languages"

readme = "README.md"
repository = "https://github.com/erwanM974/common_sequence_diagram_io"
homepage = "https://github.com/erwanM974/common_sequence_diagram_io"

keywords = ["interaction", "sequence-diagram", "sequence-chart", "parser", "draw"]


[features]
default   = ["from_text", "to_text", "to_image"]
from_text = ["dep:nom"]
to_text   = []
to_image  = ["dep:ab_glyph", "dep:image", "dep:imageproc", "dep:image_colored_text"]

[dependencies]
maplit = "1.0.2"
nom                = { version = "7.1.3", optional = true }
ab_glyph           = { version = "0.2.23", optional = true }
image              = { version = "0.25.0", optional = true }
imageproc          = { version = "0.25.0", optional = true }
image_colored_text = { version = "0.1.3", optional = true }